# task_manager

./: Dockerfile  README.md  celery_worker.py  dev_server.py  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt  server.py  uwsgi.ini
api_specs/: api.yaml
app/api/controllers/auth/: controller.py
app/api/controllers/auth/refresh/: controller.py
app/api/controllers/auth/signup/: controller.py
app/api/controllers/status/: controller.py  serializer.py
app/api/controllers/task/: controller.py  serializer.py
app/api/controllers/user/: controller.py  serializer.py
app/data/: models.py
app/tasks/: tasks.py
app/utils/: constants.py  decorators.py
core/: extensions.py  factories.py
core/settings/: __init__.py  base.py  development.py  production.py  staging.py  testing.py
database/: base.py
tests/: conftest.py
tests/controllers/auth/: test_auth_controller.py
tests/controllers/auth/refresh/: test_refresh_controller.py
tests/controllers/auth/signup/: test_signup_controller.py
tests/controllers/status/: test_status_controller.py
tests/controllers/task/: test_task_controller.py
tests/controllers/user/: test_user_controller.py
