[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = "Task manager"
authors = ["Ali Heyderli <ali.heyderli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask_env = "^2.0.0"
connexion = {extras = ["swagger-ui"], version = "^2.6.0"}
prance = "^0.20.2"
peewee = "^3.14.4"
pymysql = "^1.0.2"
flask-jwt-extended = "^4.1.0"
flask-marshmallow = "^0.11.0"
celery = "^5.0.5"
pyamqp = "^0.1.0"
redis = "^3.5.3"
ipdata = "^3.4.3"
flask-cors = "^3.0.10"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
